--- a/style/color.css
+++ b/style/color.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+body{
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: rgba(26, 11, 46, 1);
+    overflow-x: hidden;
+}
+
 /* shared styles */
 .inter-font {
   font-family: "Inter", sans-serif;
@@ -23,48 +31,51 @@
     color: white;
 }
 
-button{
+.btn-primary{
     display: flex;
     height: 44px;
     max-width: 135px;
     padding: 12px 16px;
     border-radius: 10000px;
     gap: 4px;
-    /* background-color: ; */
+    border: none;
 }
-button p{
+.btn-primary p{
     font-size: 1rem;
     font-weight: 600;
     color: white;
 }
-button img{
-    width: 1.25rem;
-    height: 1.25rem;
+.btn-primary span{
+    font-size: 1rem;
+    font-weight: 600;
+    color: white;
 }
 
 /* nav related styles */
 
 nav{
-    max-width: 1600px;
+    max-width: 1200px;
     height: 92px;
-    padding: 1rem 12.5rem;
+    /* padding: 16px 12.5%; */
     display: flex;
+    margin: 0 auto;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(26, 11, 46, 1);
+    
     
 }
 nav h1{
     height: 2rem;
-    width: 13.6rem;
+    width: 13.625%;
     font-size: 2rem;
     font-weight: bolder;
 }
 nav ul{
     /* border: 2px solid salmon; */
-    width: 218px;
+    width: 13.625%;
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
+    /* justify-content: space-between; */
 }
 nav li{
     list-style: none;
@@ -78,3 +89,68 @@ nav a{
     color: white;
 
 }
+
+/* Hero section design */
+ #hero-section{
+    width: 100%;
+    max-width: 1600px;
+    min-height: calc(100vh - 92px);
+    background: url("/assets/hero-bg.png") center/cover no-repeat,
+                rgba(42, 24, 108, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden; */
+}
+
+.hero-container{
+    max-width: 550px;
+    text-align: center;
+}
+
+.img-container{
+    max-width: 350px;
+    margin: 0 auto 24px;
+    position: relative;
+}
+
+.upper-img{
+    position: absolute;
+    top: 22%;
+    left: 35%;
+}
+
+.img-container .lower-img{
+    margin: 0 auto;
+}
+
+.btn-container{
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+}
+.hero-container h1{
+    font-size: 4rem;
+    font-weight: 800;
+    color: white;
+    margin-bottom: 8px;
+}
+.hero-container > p{
+    max-width: 550px;
+    opacity: 0.8;
+    color: white;
+    margin-bottom: 24px;
+}
+#spotify-btn{
+    max-width: 201px;
+    height: 44px;
+}
+
+#message-btn{
+    background: none;
+    border: 1px solid  rgba(0, 255, 136, 1);   
+}
+#message-btn p{
+    color: rgba(0, 255, 136, 1);
+}
+
