--- a/style/color.css
+++ b/style/color.css
@@ -91,7 +91,7 @@ nav a{
     width: 100%;
     max-width: 1600px;
     min-height: calc(100vh - 92px);
-    background: url("../assets/hero-bg.png"), rgba(42, 24, 108, 1);
+    background: url(../assets/hero-bg.png), rgba(42, 24, 108, 1);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
