--- a/style/color.css
+++ b/style/color.css
@@ -462,6 +462,7 @@ nav a{
         margin: 0 20px;
         padding-top: 40px;
         text-align: center;
+        margin-bottom: 40px;
     }
     .heading-primary{
         font-size: 2rem;
