--- a/style/color.css
+++ b/style/color.css
@@ -509,11 +509,12 @@ nav a{
         grid-template-columns: repeat(2, auto);
     }
      footer{
-        min-height: 248px;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
+        height: 248px;
+        /* width: 100%; */
+        background: url(../assets/bg-footer.png), rgba(42, 24, 108, 1);
         background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
         padding: 40px 0;
     }
     .container{
@@ -530,7 +531,7 @@ nav a{
     .logos-container {
         grid-template-columns: repeat(2,auto);
         row-gap: 16px;
-        margin: 24px 0;
+        margin: 16px 0 24px;
     }
 }
 
